refactor(conflict): adapt reports, plugin, and tests to encapsulated model
- Update ConflictReport and ConflictReportEntry to use getters
- Update CardboardMixinPlugin to use MixinClassInfo getters
- Update ConflictDetectorUnitTest helpers to use setters